conformance/tests/httproute-rewrite-path-request-header-modifier-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-path-request-header-modifier-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /full
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /test
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: X-Header-Set
            value: set-overwrites-values
          add:
          - name: X-Header-Add
            value: header-val-1
          - name: X-Header-Add-Append
            value: header-val-2
          remove:
          - X-Header-Remove
  - matches:
    - path:
        type: PathPrefix
        value: /prefix
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /test
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: X-Header-Set
            value: set-overwrites-values
          add:
          - name: X-Header-Add
            value: header-val-1
          - name: X-Header-Add-Append
            value: header-val-2
          remove:
          - X-Header-Remove
